--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -297,3 +297,15 @@
     box-shadow: none;
   }
 }
+
+///////////////////////////
+// Paragraph
+.paragraph:not(:last-of-type) {
+  margin-bottom: 2rem;
+}
+
+///////////////////////////
+// List
+
+///////////////////////////
+// Recommend
