--- a/css/style.css
+++ b/css/style.css
@@ -249,6 +249,9 @@ body {
     transform: scale(1);
     box-shadow: none; } }
 
+.paragraph:not(:last-of-type) {
+  margin-bottom: 2rem; }
+
 .container {
   max-width: 120rem;
   margin: 8rem auto;
